  . Added \u{xxxxx} Unicode Codepoint Escape Syntax. (Andrea)
  . Fixed oversight where define() did not support arrays yet const syntax did. (Andrea, Dmitry)
  . Use "integer" and "float" instead of "long" and "double" in ZPP, type hint and conversion error messages. (Andrea)
  . Implemented FR #55428 (E_RECOVERABLE_ERROR when output buffering in output buffering handler). (Kalle)

- Date:
  . Fixed day_of_week function as it could sometimes return negative values
    internally. (Derick)

- DBA:
  . Fixed bug #62490 (dba_delete returns true on missing item (inifile)). (Mike)

- DOM:
  . Made DOMNode::textContent writeable. (Tjerk)

- GD:
  . Made fontFetch's path parser thread-safe. (Sara)

- Fileinfo:
  . Fixed bug #66242 (libmagic: don't assume char is signed). (ArdB)

- Filter:
  . New FILTER_VALIDATE_DOMAIN and better RFC conformance for FILTER_VALIDATE_URL. (Kevin Dunglas)

- FPM:
  . Fixed bug #65933 (Cannot specify config lines longer than 1024 bytes). (Chris Wright)
  . Implement request #67106 (Split main fpm config). (Elan Ruusamäe, Remi)

- LiteSpeed:
  . Updated LiteSpeed SAPI code from V5.5 to V6.6. (George Wang)

- Mcrypt:
  . Fixed possible read after end of buffer and use after free. (Dmitry)

- Opcache:
  . Fixed bug with try blocks being removed when extended_info opcode
    generation is turned on. (Laruence)
  . Fixed bug #68644 (strlen incorrect : mbstring + func_overload=2 +UTF-8
    + Opcache). (Laruence)

- pcntl:
  . Fixed bug #60509 (pcntl_signal doesn't decrease ref-count of old handler
    when setting SIG_DFL). (Julien)

- PDO_mysql:
  . Fixed bug #68424 (Add new PDO mysql connection attr to control multi
    statements option). (peter dot wolanin at acquia dot com)

- Reflection
  . Fixed inheritance chain of Reflector interface. (Tjerk)

- Session:
  . Fixed bug #67694 (Regression in session_regenerate_id()). (Tjerk)

- SOAP:
  . Fixed bug #68361 (Segmentation fault on SoapClient::__getTypes).
    (Laruence)

- SPL: